fix(react-table): z-index in header and footer

--- a/packages/@biorate/react-table/src/footer.module.less
+++ b/packages/@biorate/react-table/src/footer.module.less
@@ -2,4 +2,5 @@
   width: 100%;
   height: 40px;
   background: green;
+  z-index: 1;
 }
