--- a/packages/@biorate/react-table/src/header.module.less
+++ b/packages/@biorate/react-table/src/header.module.less
@@ -2,4 +2,5 @@
   width: 100%;
   height: 40px;
   background: red;
+  z-index: 1;
 }
